# opencli_hermes

./: .gitignore  README.md  node_sites.yaml
.claude/: README.md  deployment-log.md  deployment.md  feature-audit.md  spec.md
.claude/develop/: README.md  install-ticket.md
.claude/projects/-Users-chenjunru-Desktop-OpenCLI-Agent/memory/: MEMORY.md  feedback_language.md  user_role.md
.claude/research/: README.md  categorization-B.md
.claude/tmp/: categorization-A.md  categorization-C.md
.codex/: README.md
deploy/: README.md
deploy/vps/: Caddyfile  fleet-hub.service  setup.sh
docs/: hermes-config.yaml
fleet-agent/: .env.example  .gitignore  README.md  pyproject.toml
fleet-agent/src/fleet_agent/: __init__.py  __main__.py  config.py  login_detect.py  runner.py  ws_client.py
fleet-agent/tests/: test_login_detect.py  test_runner.py  test_ws_client.py
fleet-hub/: .env.example  .gitignore  README.md  pyproject.toml
fleet-hub/scripts/: install-agent.sh
fleet-hub/src/fleet_hub/: __init__.py  __main__.py  app.py  config.py  db.py  models.py  schemas.py  security.py
fleet-hub/src/fleet_hub/api/: __init__.py  _deps.py  health.py  install.py  nodes.py  tasks.py
fleet-hub/src/fleet_hub/pipeline/: __init__.py  normalize.py  store.py
fleet-hub/src/fleet_hub/resources/: __init__.py
fleet-hub/src/fleet_hub/ws/: __init__.py  manager.py
fleet-hub/tests/: conftest.py  test_install.py  test_nodes.py  test_pipeline.py  test_tasks.py  test_ws_manager.py
fleet-mcp/: .env.example  README.md  pyproject.toml
fleet-mcp/src/fleet_mcp/: __init__.py  __main__.py  admin_client.py  config.py  hub_client.py  schemas.py  security.py  server.py
fleet-mcp/tests/: test_hub_client.py  test_security.py  test_server.py
src/fleet_mcp/: config.py
tests/: test_admin_client.py  test_security.py
