[project]
name = "fleet-agent"
version = "0.1.0"
description = "Laptop-side agent: runs opencli commands dispatched by fleet-hub"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13,<16",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[project.scripts]
fleet-agent = "fleet_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fleet_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
