[project]
name = "fleet-hub"
version = "0.1.0"
description = "Central hub for the OpenCLI fleet — REST + WS + pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.7,<3",
    "websockets>=13,<16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
]

[project.scripts]
fleet-hub = "fleet_hub.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fleet_hub"]

[tool.hatch.build.targets.wheel.force-include]
"scripts/install-agent.sh" = "fleet_hub/resources/install-agent.sh"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
