[project]
name = "fleet-mcp"
version = "0.1.0"
description = "Thin MCP server bridging Hermes Agent to opencli-admin fleet"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2,<4",
    "httpx>=0.27,<1",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.7,<3",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fleet_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
